# daitum-core

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CODING_GUIDELINES.md  README.md  pyproject.toml
daitum-configuration/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
daitum-configuration/src/daitum_configuration/: __init__.py  _buildable.py  configuration.py
daitum-configuration/src/daitum_configuration/algorithm_configuration/: algorithm.py  cmaes_algorithm.py  genetic_algorithm.py  numeric_expression.py  vns_algorithm.py
daitum-configuration/src/daitum_configuration/data_source/: data_source.py  data_source_config.py  data_source_type.py  geo_location_config.py  set_features_config.py
daitum-configuration/src/daitum_configuration/data_source/batched_data_source/: batch_data_source_type.py  batched_data_source_config.py  data_source_info.py
daitum-configuration/src/daitum_configuration/data_source/data_store/: __init__.py  data_filter.py  data_filter_type.py  data_store_config.py  equality_data_filter.py  inequality_data_filter.py  regex_data_filter.py  set_data_filter.py  wildcard_data_filter.py
daitum-configuration/src/daitum_configuration/data_source/distance_matrix/: distance_matrix_config.py  output_matrix.py
daitum-configuration/src/daitum_configuration/data_source/excel_transform/: excel_transform_config.py  import_option_overrides.py
daitum-configuration/src/daitum_configuration/data_source/model_transform/: data_input_source_type.py  model_transform.py  model_transform_config.py  model_transform_input.py
daitum-configuration/src/daitum_configuration/data_source/run_report/: run_report_config.py
daitum-configuration/src/daitum_configuration/model_configuration/: constraint.py  decision_variable.py  external_configuration.py  model_configuration.py  objective.py  priority.py  scenario_output.py  stochastic_configuration.py
daitum-configuration/src/daitum_configuration/model_property/: model_import_options.py  model_property.py  overlay_config.py
daitum-configuration/src/daitum_configuration/report_property/: report_data.py  report_export_format.py  report_property.py
daitum-configuration/src/daitum_configuration/schedule_configuration/: schedule_configuration.py  step_configuration.py  step_type.py
daitum-configuration/tests/: test_configuration.py
daitum-model/: ADDING_FORMULAS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
daitum-model/src/daitum_model/: __init__.py  _base_formulas.py  _buildable.py  _helpers.py  change_calculator.py  data_processor.py  data_types.py  derived_table.py  enums.py  fields.py  formula.py  formulas.py  joined_table.py  model.py  named_values.py  tables.py  union_table.py  validator.py
daitum-model/tests/: test_formulas.py  test_model.py
daitum-ui/: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
daitum-ui/src/daitum_ui/: __init__.py  _buildable.py  _colours.py  _composite_view.py  _data.py  _events.py  _validation.py  base_view.py  card_view.py  chart_view.py  charts.py  context_variable.py  data.py  elements.py  filter_component.py  fixed_value_view.py  form_view.py  gantt_view.py  icons.py  layout.py  map_view.py  menu_configurations.py  modal.py  model_event.py  named_value_view.py  navigation_items.py  roster_view.py  styles.py  tabbed_view.py  tabular.py  template_binding_key.py  ui_builder.py
daitum-ui/tests/: test_ui_builder.py
docs/: README.md  conf.py  generate_formula_docs.py  getting_started.rst  index.rst  requirements.txt
docs/_static/: custom.css
docs/daitum_configuration/: algorithm.rst  configuration.rst  data_sources.rst  decision_variables.rst  index.rst  model_properties.rst  objectives_and_constraints.rst  quickstart.rst  reports.rst  schedule.rst
docs/daitum_configuration/algorithms/: cmaes.rst  genetic.rst  index.rst  vns.rst
docs/daitum_configuration/data_sources/: batched.rst  data_store.rst  distance_matrix.rst  excel_transform.rst  geo_location.rst  index.rst  model_transform.rst  run_report.rst  set_features.rst
docs/daitum_configuration/model_configuration/: constraint.rst  decision_variable.rst  external.rst  index.rst  objective.rst  priority.rst  scenario_output.rst  stochastic.rst
docs/daitum_model/: fields.rst  formulas.rst  formulas_intro.rst  index.rst  model.rst  named_values.rst  quickstart.rst  tables.rst  types.rst
docs/daitum_model/tables/: data_table.rst  derived_table.rst  index.rst  joined_table.rst  union_table.rst
docs/daitum_ui/: base_view.rst  card_view.rst  chart_view.rst  charts.rst  conf.py  context_variable.rst  data.rst  elements.rst  filter_component.rst  fixed_value_view.rst  flex_view.rst  form_view.rst  gantt_supporting_types.rst  gantt_tasks.rst  gantt_view.rst  gantt_view_types.rst  grid_view.rst  icons.rst  index.rst  layout.rst  map_view.rst  modal.rst  model_event.rst  named_value_view.rst  navigation_items.rst  quickstart.rst  roster_view.rst  styles.rst  tabbed_view.rst  table_view.rst  tabular.rst  tabular_base.rst  tree_view.rst  ui_actions.rst  ui_builder.rst  views.rst
docs/getting_started/: installation.rst  quickstart.rst  what_is_a_daitum_model.rst
docs/tutorials/: best_practices.rst  data_processors.rst  data_stores.rst  integration.rst  introduction.rst  reports.rst  templates_and_versioning.rst
pipelines/: build.sh  changed_packages.sh  check_changelog.py  check_version.py  docs.sh  lint.sh  mirror.sh  publish.sh  tag_version.sh
